Support build doc with spectacle-docs
